Attemp fix coverals

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      MIX_ENV: test
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     services:
     # Label used to access the service container
       postgres:
